Add button tag to html

--- a/views/about.html
+++ b/views/about.html
@@ -11,24 +11,27 @@
     <section class="about">
       <img class="photo-about" src="/images/pix.jpg" alt="personal photo" />
       <p>
-        Hi, I'm <b>Sulaimon Olalekan Ekundayo</b>. I have a diverse background, starting with studies in Accounting, Business
-        Management, and Finance, before making a transition into the world of IT. Initially, I worked as a Software QA
-        Engineer, where I gained a strong understanding of quality assurance practices and testing methodologies.
-        <br><br>
+        Hi, I'm <b>Sulaimon Olalekan Ekundayo</b>. I have a diverse background, starting with studies in Accounting,
+        Business Management, and Finance, before making a transition into the world of IT. Initially, I worked as a
+        Software QA Engineer, where I gained a strong understanding of quality assurance practices and testing
+        methodologies. <br /><br />
         Currently, I am focused on my journey to become a full-stack developer, diving deep into technologies like
         Node.js, Express.js, React, and more. I enjoy blending my analytical skills with coding to solve complex
         problems, and I’m always eager to learn and grow in the ever-evolving tech landscape. My unique journey has
-        equipped me with a broad perspective, which I apply to both development and problem-solving. 
-        <br><br>
-        In addition to my technical interests, I have a strong passion for agriculture, particularly in crops and animal husbandry. I enjoy
-        reading and learning more about the agricultural industry, which often inspires my creativity and drive for
-        continuous learning. Explore my portfolio to see the projects I’ve worked on as I continue my transition into
-        the world of full-stack development.
+        equipped me with a broad perspective, which I apply to both development and problem-solving.
+        <br /><br />
+        In addition to my technical interests, I have a strong passion for agriculture, particularly in crops and animal
+        husbandry. I enjoy reading and learning more about the agricultural industry, which often inspires my creativity
+        and drive for continuous learning. Explore my portfolio to see the projects I’ve worked on as I continue my
+        transition into the world of full-stack development.
       </p>
+      <button class="btn">
+        <a href="https://app.netlify.com/teams/ekundayoso/sites" target="_blank">My projects</a>
+      </button>
     </section>
     <footer>
       <div class="contact">
-        <h3><i>Contact me:</h3></i>
+        <h3><i>Contact me:</i></h3>
         <div class="contact-info">
           <p>
             <i><b>Email: </b><a href="mailto:sulaimon.ekundayo1@gmail.com">sulaimon.ekundayo1@gmail.com</a></i>
