--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,5 +83,25 @@ footer {
     text-align: center;
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.btn {
+  padding: 10px 20px;
+  background-color: #2e5070;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+}
+
 
 // About Me Page
