--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,9 @@
 @import "tailwindcss";
 
-
-@layer base {
-    body {
-        @apply bg-[#a6d2ad]
-    }
+body {
+  font-family: proxima-nova, sans-serif;
+  font-weight: 300;
+  background-color: #d4daed;
 }
 
 .back-to-top {
@@ -29,4 +28,43 @@
 
 .back-to-top-button:hover {
   background-color: #efa754;
+}
+
+
+/* Custom styles for the flip card effect */
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.flip-card-front {
+  background-color: #fff;
+}
+
+.flip-card-back {
+  background-color: #f3f4f6;
+  transform: rotateY(180deg);
+  overflow-y: auto; /* Ensure content is scrollable */
 }
